<resources>
    <string name="app_name">谁的部下</string>


    <string name="toolbar_title">ToolBar标题</string>
    <string name="toolbar_title_devices">设备</string>
    <string name="toolbar_title_discover">发现</string>
    <string name="toolbar_title_me">我的</string>

    <string name="main_menu_devices">设备</string>
    <string name="main_menu_discover">发现</string>
    <string name="main_menu_me">我的</string>


    <string name="add_devices_title">添加设备</string>
    <string name="devices_reset">设备重置</string>

    <string name="connect_devices_title">连接设备</string>
    <string name="connect_devices_name">设备名称</string>
    <string name="connect_devices_examine_connect">检查连接</string>
    <string name="connect_devices_config">配置设备</string>
    <string name="connect_devices_state_config">开始配置</string>
    <string name="connect_devices_hint_title">连接提示</string>
    <string name="connect_devices_hint_data">  在点击开始配置前，请确保手机已连接设备的wifi热点，且要配置的设备没有被其他账号绑定过（如有绑定请先在原账号解绑）。</string>


    <string name="config_devices_title">配置设备</string>
    <string name="config_devices_title_init">初始配置</string>
    <string name="config_devices_title_cloud">远程配置</string>
    <string name="config_devices_title_land">本地配置</string>


    <string name="config_devices_connect_btn">连接到设备</string>
    <string name="config_devices_wifi_connect_btn">wifi连接测试</string>
    <string name="config_devices_save_btn">保存配置</string>
    <string name="config_devices_restart">重启设备</string>
    <string name="config_devices_uploading">上传信息</string>

    <string name="config_devices_connect_state">连接状态</string>
    <string name="config_devices_connect_state_true">已连接</string>
    <string name="config_devices_connect_state_false">已断开连接</string>


    <string name="devices_control_title">设备详情</string>
    // rgb设备详情
    <string name="devices_control_rgb_extinguish">息屏/亮屏</string>
    <string name="devices_control_rgb_clear_screen">清屏</string>
    <string name="devices_control_rgb_program_list">节目列表</string>
    <string name="devices_control_rgb_program_time">节目时间</string>
    <string name="devices_control_edit_network">修改网络</string>
    
    // 修改网络
    <string name="devices_control_edit_network_config">配置网络</string>
    <string name="devices_control_edit_network_ssid">请输入WiFi名称</string>
    <string name="devices_control_edit_network_pwd">请输入WiFi密码</string>
    <string name="devices_control_edit_network_ip">请输入IP</string>
    <string name="devices_control_edit_network_gateway">请输入网关IP</string>
    <string name="devices_control_edit_network_commit">提交</string>
    <string name="devices_control_edit_network_static">静态IP</string>
    <string name="devices_control_edit_network_restart">立即生效</string>
    

    // login
    <string name="login_name">登录/注册</string>
    <string name="login_register">立即注册</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login_login">登录</string>
    <string name="reg_account">输入账号</string>
    <string name="reg_pwd">输入密码</string>
    <string name="reg_email">输入邮箱</string>
    <string name="reg_verify_code">输入验证码</string>
    <string name="reg_get_verify_code">获取验证码</string>
    <string name="login_reg">注册</string>
    <string name="reg_login">去登录</string>
    

    <string-array name="test_add_devices_item_data">

        <item>测试设备1</item>
        <item>测试设备2</item>
        <item>测试设备3</item>
        <item>测试设备4</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>




    <string name="network_error">当前无网络，请检查你的网络设置</string>
    <string name="notify_no_network">网络连接不可用，请稍后重试！</string>
    <string name="esky_service_exception">网络不给力，请稍候重试！</string>
    <string name="time_out_please_try_again_later">连接超时,请稍后再试</string>


    <string name="not_item_task">已经没有东西可以返回啦</string>
    <string name="save">保存</string>
    <string name="share">分享</string>

</resources>