<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/devices_control_edit_network_config"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/edit_network_commit"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/devices_control_edit_network_commit"
            android:textColor="@color/purple_500"
            android:textSize="16dp" />
    </LinearLayout>


    <EditText
        android:id="@+id/edit_network_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/empty"
        android:hint="@string/devices_control_edit_network_ssid"
        android:singleLine="true"
        android:inputType="textMultiLine"
        android:maxHeight="50dp"
        android:minHeight="50dp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:textSize="16dp" />


    <EditText
        android:id="@+id/edit_network_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/empty"
        android:hint="@string/devices_control_edit_network_pwd"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:singleLine="true"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:textSize="16dp"/>


    <EditText
        android:id="@+id/edit_network_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/empty"
        android:hint="@string/devices_control_edit_network_ip"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:singleLine="true"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/edit_network_gateway"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/empty"
        android:hint="@string/devices_control_edit_network_gateway"
        android:minHeight="50dp"
        android:maxHeight="50dp"
        android:singleLine="true"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/edit_network_static"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:text="@string/devices_control_edit_network_static" />

        <CheckBox
            android:id="@+id/edit_network_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:checked="false"
            android:text="@string/devices_control_edit_network_restart" />

    </LinearLayout>


</LinearLayout>