<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/connect_devices_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        app:title="@string/connect_devices_title"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_devices_name"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_devices_hint_title"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_devices_hint_data"
        android:layout_marginStart="15dp"/>

<!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">

        <com.flod.loadingbutton.LoadingButton
            android:id="@+id/connect_devices_but"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/purple_500"
            android:gravity="center"
            android:text="@string/connect_devices_examine_connect"
            android:textColor="@color/white"
            app:radius="22.5dp"
            app:enableShrink="true"
            app:enableRestore="true"
            app:shrinkShape="Oval"
            app:loadingDrawablePosition="Start"
            app:loadingEndDrawableSize="27dp"
            app:disableClickOnLoading="true" />

    </LinearLayout>
-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="22.5dp"
            app:cardBackgroundColor="@color/purple_500">
            <RelativeLayout
                android:id="@+id/connect_devices_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/connect_devices_btn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_devices_state_config"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_centerInParent="true"/>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>






</LinearLayout>